Fixed camera icon getting cut on mobile Chrome

--- a/blog/_assets/stylesheets/main.scss
+++ b/blog/_assets/stylesheets/main.scss
@@ -144,7 +144,7 @@ header {
       display: inline;
 
       span.fa {
-        padding: .25em .25em;
+        padding: .25em .5em;
       }
     }
   }
